# arkadia-data

./: .gitignore  CHANGELOG.md  LICENCE  README.md
python/: .gitignore  README.md  aid  benchmark_report.md  benchmark_report.txt  pyproject.toml
python/data/: aid-test-01.aid  aid-test.ak-data  akd-test-01.ak-data  akd-test-01.json  arrays-nested.ak-data  arrays-objects.ak-data  arrays-primitive.ak-data  arrays-tabular.ak-data  delimiters.aid  normalization.ak-data  objects.ak-data  options.ak-data  primitives.ak-data  toon.aid  whitespace.aid
python/src/arkadia/: __init__.py
python/src/arkadia/ai/: __init__.py
python/src/arkadia/ai/data/: Config.py  Decoder.py  Encoder.py  Meta.py  Node.py  Schema.py  __init__.py  colorize.py  decode.py  encode.py  parse.py
python/src/arkadia/cli/: __init__.py  colors.py  print_banner.py  print_options.py  print_usage.py
python/src/arkadia/cli/aid/: aid.py  benchmark.py  decode.py  encode.py  meta.py
python/src/arkadia/cli/akd/: akd.py  benchmark.py  decode.py  encode.py  meta.py
python/src/arkadia/data/: Config.py  Decoder.py  Encoder.py  Meta.py  Node.py  Schema.py  __init__.py  colorize.py  encode.py  parse.py
python/tests/: test_00_primitive.py  test_01_schema.py  test_02_data.py  test_03_errors.py  test_04_list.py  test_05_record.py  test_06_meta.py  test_07_prompt_output.py  utils.py
typescript/: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
typescript/scripts/: verify-build.js
typescript/src/: config.ts  index.ts
typescript/src/core/: Decoder.ts  Encoder.ts  Parser.ts
typescript/src/models/: Meta.ts  Node.ts  Schema.ts
typescript/tests/: 00.meta.test.ts  00.node.test.ts  00.primitive.test.ts  00.schema.test.ts  01.schema.test.ts  02.data.test.ts  03.errors.test.ts  04.list.test.ts  05.record.test.ts  06.meta.test.ts  07.prompt-output.test.ts  utils.ts
