[project]
name = "arkadia-ai-data-format"
version = "0.1.6"
description = "Arkadia AI Data Format (AID) - A versatile data serialization format optimized for AI applications."
readme = "README.md"
authors = [
    { name = "Arkadiusz Klemenko", email = "arek.klemenko@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.14.0",
    "pytest>=9.0.2",
    "tiktoken>=0.12.0",
    "toon-format",
]

[project.scripts]
aid = "arkadia.cli.aid.aid:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 

[tool.hatch.build.targets.wheel]
packages = ["src/arkadia"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
toon-format = { git = "https://github.com/toon-format/toon-python.git" }


