[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10. Change this to match your project version.
target-version = "py310"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# I (Isort) - Import sorting
select = ["E4", "E7", "E9", "F", "I"]

# Ignore specific rules (e.g., line length in comments)
ignore = []

# Allow fix for all enabled rules (when `--fix` is provided).
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[project]
name = "arkadia-data"
version = "0.1.9"
description = "Arkadia Data Format (AK-DATA) - A versatile data serialization format optimized for AI applications."
readme = "README.md"
authors = [
    { name = "Arkadia Solutions", email = "contact@arkadia.solutions" }
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.14.0",
    "pytest>=9.0.2",
    "tiktoken>=0.12.0",
    "toon-format",
]

[project.scripts]
ak-data = "arkadia.cli.akd.akd:main"
akd = "arkadia.cli.akd.akd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 

[tool.hatch.build.targets.wheel]
packages = ["src/arkadia"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
toon-format = { git = "https://github.com/toon-format/toon-python.git" }

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]


